# LabScript-AI

./: .env.example  .gitignore  Agent配置说明.md  README.md  README_配置管理.md  architecture.puml  config.json.example  config.py  langchain_agent.py  main.py  opentrons_utils.py  otcoder engineer.py  pyproject.toml  requirements.txt  run.py  streamlit_app.py  test_imports.py  服务器部署指南.md
.trae/: TODO.md
Coze/: Agent流程UML.md  Agent流程概述.md  Backend技术架构与流程.md  LabscriptAI_Agent_流程说明.md  LabscriptAI_Coze_Agent_意图识别配置.md  LabscriptAI_对话流描述.md  Opentrons设备控制_Prompt.md  代码迭代优化_Prompt.md  智能实验室系统架构.uml  智能实验室系统架构_简化版.uml  系统架构UML.md  设备分析后意图匹配.md  设备类型识别_Prompt.md  错误分析报告_Prompt.md
archive/: 55question.csv  README.md
backend/: __init__.py  api_server.py  config.py  config_manager.py  diff_utils.py  external_publisher.py  file_exporter.py  langchain_agent.py  nginx  nginx-main  opentrons_utils.py  prompts.py  protocol_visualizer_bridge.py  pylabrobot_agent.py  pylabrobot_template.py  pylabrobot_utils.py
docker/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml
docs/: API_ARCHITECTURE.md  INSTALLATION.md  diff_ablation_experiment.md  配置管理指南.md
labscriptAI-frontend/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
opentrons_ai_protocol_generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
opentrons_validator/: simulate.py  快速使用指南.md
pyFluent/: .gitignore  FCACommand.py  FluentAPI_Demo.py  FluentLabware.py  FluentLiquidClass.py  MCA384Commond.py  Migration_Guide.py  Protocol.py  README.md  RGACommond.py  (+2 more)
(+93 files in other folders)
